Added `GET, POST /v1/server/properties` endpoint
